--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Hind:wght@300;400;500;600;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Hind:wght@300;400;500;600;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body{
-    font-family: "Quicksand", sans-serif;
+body {
+    font-family: "Noto Sans", sans-serif;
 }
